fix spacing in article/detail

--- a/resources/less/content.less
+++ b/resources/less/content.less
@@ -37,20 +37,10 @@
 }
 
 .content-header {
-    padding-top: @grid-gutter-width;
-    @media screen and (max-width: @screen-sm-max) {
-        padding-bottom: 0;
-        margin-bottom: -@grid-gutter-width;
-    }
     font-family: @font-family-sans-serif;
-    font-size: 18px;
-    line-height: 1.5em;
+    font-size: @font-size-content-base-sans-serif;
+    line-height: @line-height-content;
     color: @dark-grey;
-    .row > div {
-        margin: auto;
-        padding-left: 0;
-        padding-right: 0;
-    }
     a,
     button {
         color: @dark-grey;
@@ -73,11 +63,6 @@
 .editor,
 .article,
 .collection {
-    &.content-header,
-    &.content-section {
-        padding-top: 2 * @padding-large-vertical;
-        padding-bottom: @padding-large-vertical;
-    }
     a:not(.slick-slide)  {
         color: @gray-dark;
         border-bottom: @link-undeline-color solid 2px;
